force-app/main/default/objects/Behavior_Assessment__c/Behavior_Assessment__c.object-meta.xml
<CustomObject>
    <label>Behavior Assessment</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>Behavior Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavior Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>