force-app/main/default/objects/Behavior_Assessment__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Behavior Assessments</relationshipLabel>
    <relationshipName>Behavior_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>