force-app/main/default/objects/Behavior_Assessment__c/recordTypes/ARC_CARE.recordType-meta.xml
<RecordType>
    <fullName>ARC_CARE</fullName>
    <active>true</active>
    <label>ARC/CARE</label>
</RecordType>