force-app/main/default/objects/Behavior_Assessment__c/recordTypes/CRC.recordType-meta.xml
<RecordType>
    <fullName>CRC</fullName>
    <active>true</active>
    <label>CRC</label>
</RecordType>